<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_about">About</string>
    <string name="copyright" translatable="false">© 2016 Align Labs</string>
    <string name="action_help">Help</string>
    <string name="app_name">BMI Calculator</string>
    <string name="calculer">Ok</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="centimetre">Centimetre</string>
    <string name="developed_by">Application developed by</string>
    <string name="dialog_help">You can calculate your Body Mass Index using this app.\n\nTo do so, please enter your weight in Kilograms, then your height.</string>
    <string name="dialog_help_title">Help</string>
    <string name="empty_fields">Please fill all the fields!</string>
    <string name="hint_poids">Weight</string>
    <string name="hint_taille">Height</string>
    <string name="mega_function">Mega function!</string>
    <string name="metre">Meter</string>
    <string name="moto">God can give you more</string>
    <string name="my_name" translatable="false">Align Labs</string>
    <string name="raz">Reset</string>
    <string name="small_size">Too small values!</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_splash">Splash</string>
    <string name="screen_placeholder">Please tap on "Calculate"</string>
    <string name="mega_function_key">You have a perfect weight!</string>
    <string name="bmi">"BMI: "</string>
    <string name="clipboard_notif">Copied to clipboard</string>
    <string name="dialog_about"><![CDATA[         BMI Calculator, an application designed by <b>Seth-Pharès Gnavo</b>.<br/>
    <a href=\'https://about.me/sgnavo\'>Website</a>&nbsp;&nbsp;
    <a href=\'https://twitter.com/sethgnavo\'>Twitter</a>&nbsp;&nbsp;
    <a href=\'https://facebook.com/sgnavogollar\'>Facebook</a>&nbsp;&nbsp;
    <a href=\'https://google.com/+SethPharèsGnavo7\'>Google+</a>&nbsp;&nbsp;
    <a href=\'https://github.com/sethgnavo\'>GitHub</a>&nbsp;&nbsp;
    <a href=\'https://www.linkedin.com/in/seth-pharès-gnavo-2978739a\'>LinkedIn</a>     ]]></string>
    <string name="dialog_dismiss">Dismiss</string>
    <string name="dialog_about_title">BMI Calculator 0.2.0</string>
    <string name="action_update">Check for update</string>
    <string name="user_under_weight">You are underweight!</string>
    <string name="user_normal_weight">You have a normal weight</string>
    <string name="user_overweight">You are overweight!</string>
    <string name="app_update_wait">Please wait…</string>
    <string name="app_update_offline">Check your network connection and retry.</string>
</resources>