<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/result"
        android:paddingTop="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <RadioGroup
                android:id="@+id/group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:checkedButton="@+id/radio2"
                android:layout_below="@+id/Textig"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/metre" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/centimetre" />
            </RadioGroup>

            <Button
                android:id="@+id/raz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mega"
                android:layout_toRightOf="@+id/calcul"
                android:layout_marginLeft="16dp"
                android:text="@string/raz" />


            <Button
                android:id="@+id/calcul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mega"
                android:text="@string/calculer"
                android:background="@drawable/btn_layout"
                android:textColor="#fff" />

            <CheckBox
                android:id="@+id/mega"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/group"
                android:text="@string/mega_function" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/Texti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <EditText
                    android:id="@+id/poids"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_poids"

                    android:inputType="numberDecimal"
                    android:background="@drawable/bg_edittext" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/Textig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/Texti">

                <EditText
                    android:id="@+id/taille"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_app_author"
                    android:ems="10"
                    android:hint="@string/hint_taille"
                    android:inputType="numberDecimal"
                    android:background="@drawable/bg_edittext" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/dialog_clone"
        android:clickable="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center_horizontal"
        android:linksClickable="true"
        android:layout_below="@+id/tool_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp" />

</RelativeLayout>
